# rsap

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: build.yml
.zed/: tasks.json
examples/: minitracer.rs
examples/plot/: core.rs  main.rs
examples/plot/core/: message.rs  state.rs
src/: consts.rs  expression.rs  function.rs  functions.rs  image.rs  lib.rs  math.rs  matrix44f.rs  obj.rs  option.rs  utils.rs  vec3f.rs  widgets.rs
src/color/: iced.rs
src/expression/: binary.rs  constant.rs  factorial.rs  func.rs  func2.rs  lexer.rs  number.rs  parenthesis.rs  parse.rs  parser.rs  traits.rs  unary.rs  variable.rs
src/expression/binary/: macros.rs
src/expression/func/: macros.rs
src/expression/func2/: macros.rs
src/expression/unary/: macros.rs
src/function/: wrapper.rs
src/functions/: add.rs  constant.rs  div.rs  mul.rs  neg.rs  sub.rs  utils.rs  variable.rs
src/widgets/: canvas.rs
src/widgets/canvas/: consts.rs  utils.rs
tests/: expression_test.rs  function_test.rs  parse_test.rs
