[package]
name = "rsap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["canvas"] }
rand = { version = "0.9.2", features = ["small_rng"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
tabs_in_doc_comments = "allow"
similar_names = "allow"
